Implementação da função deslize para exclior produto do cardápio.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="stringAbreNavegacao">Abre menu navegação</string>
     <string name="stringCategoria">Categoria</string>
     <string name="stringDescricaoBotaoFlutuanteCadastraProduto">Botão flutuante do fragmento cardápio</string>
+    <string name="stringDesfazer">Desfazer</string>
     <string-array name="categorias">
         <item>Sanduiches</item>
         <item>Pizzas</item>
