--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="stringDescricaoBotaoFlutuanteCadastraPedido">Botão flutuante do fragmento pedidos</string>
     <string name="stringDesfazer">Desfazer</string>
     <string name="string_resumo_pedido">Resumo do pedido</string>
+    <string name="string_confirma_pedido">Confirma pedido</string>
+    <string name="string_observacao">Observações</string>
     <string-array name="categorias">
         <item>Sanduíches</item>
         <item>Pizzas</item>
