--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="string_resumo_pedido">Resumo do pedido</string>
     <string name="string_confirma_pedido">Confirma pedido</string>
     <string name="string_observacao">Observações</string>
+    <string name="string_mesa">Mesa</string>
     <string-array name="categorias">
         <item>Sanduíches</item>
         <item>Pizzas</item>
